syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.loopring.lightcone.data";

import "google/protobuf/any.proto";

message Msg {
    string name = 1;
}

message LocalActors {
    repeated string paths = 1;
}

message LocalNodeSummary {
    repeated string roles = 1;
    map<string, LocalActors> actors = 2;
}

message ClusterConfig {
    int32 version = 1;
}